# resourcing

./: AGENTS.md
.github/workflows/: ci.yml
backend/: .gitignore  API_DESIGN.graphql  Cargo.toml  README.md  justfile
backend/backend-core/: Cargo.toml
backend/backend-core/migrations/: 0001_init.sql
backend/backend-core/src/: domain.rs  gql.rs  lib.rs  repo.rs
backend/backend-core/src/gql/: loader.rs  mutation.rs  query.rs  types.rs
backend/backend-core/src/repo/: dto.rs
backend/backend-core/tests/: graphql_api.rs  repo_sqlite.rs
backend/src/: main.rs
backend/xtask/: Cargo.toml
backend/xtask/src/: main.rs
frontend/: .prettierignore  codegen.ts  components.json  data-table-instructions.md  eslint.config.js  package-lock.json  package.json  ui-specification.md  vite.config.ts  vite.vitest.ts
frontend/src/lib/components/item-cell/: ItemCell.svelte  ItemCell.svelte.spec.ts  ItemCellDropdown.svelte  ItemCellDropdown.svelte.spec.ts  index.ts
frontend/src/lib/components/resource-cell/: index.ts  resource-cell-dropdown.svelte  resource-cell.svelte
frontend/src/lib/gql/: gql.ts  graphql.ts
frontend/src/routes/: +page.svelte  DataTable.svelte  columns.spec.ts  columns.ts  data-table.svelte  page.svelte.spec.ts
reqs/: project-assignments.feature
