[package]
name = "backend-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = {version = "7.0.17", features = ["dataloader", "uuid"]}
async-trait = "0.1.89"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "uuid"] }
tokio = { version = "1.47.1", features = ["rt"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
